# polycompare

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  run_and_graph_results.sh
bench/: poly_var.cpp  poly_vec.cpp  poly_virt.cpp
include/: Line.hpp  Vector2.hpp
results/: both.csv  iterate.csv  populate.csv
